--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -151,47 +151,47 @@
                     <ul data-overflowing-list-target="list" class="keywords">
                       <li>
                         <a href="/keywords/tag1">tag1
-                          <span>1</span>
+                          <span class="count_tag">1</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag2">tag2
-                          <span>10</span>
+                          <span class="count_tag">10</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag3">tag3
-                          <span>100</span>
+                          <span class="count_tag">100</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag4">tag4
-                          <span>1.0k</span>
+                          <span class="count_tag">1.0k</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag5">tag5
-                          <span>1.2k</span>
+                          <span class="count_tag">1.2k</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag6">tag6
-                          <span>1.3k</span>
+                          <span class="count_tag">1.3k</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag7">tag7
-                          <span>12.3k</span>
+                          <span class="count_tag">12.3k</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag8">tag8
-                          <span>123.5k</span>
+                          <span class="count_tag">123.5k</span>
                         </a>
                       </li>
                       <li>
                         <a href="/keywords/tag9">tag9
-                          <span>1234.6k</span>
+                          <span class="count_tag">1234.6k</span>
                         </a>
                       </li>
                     </ul>
