--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
@@ -203,16 +203,24 @@
                 <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show more keywords…" data-overflowing-list-overflow-height-value="260" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                   <ul data-overflowing-list-target="list" class="keywords">
                     <li>
-                      <a href="/keywords/keyword1">keyword1</a>
+                      <a href="/keywords/four">four
+                        <span class="count_tag">4</span>
+                      </a>
                     </li>
                     <li>
-                      <a href="/keywords/keyword2">keyword2</a>
+                      <a href="/keywords/keyword3">keyword3
+                        <span class="count_tag">3</span>
+                      </a>
                     </li>
                     <li>
-                      <a href="/keywords/keyword3">keyword3</a>
+                      <a href="/keywords/keyword2">keyword2
+                        <span class="count_tag">2</span>
+                      </a>
                     </li>
                     <li>
-                      <a href="/keywords/four">four</a>
+                      <a href="/keywords/keyword1">keyword1
+                        <span class="count_tag">1</span>
+                      </a>
                     </li>
                   </ul>
                 </div>
