--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
@@ -99,6 +99,14 @@
                   <a href="https://example.com/package/one">
                     <h4>Package One</h4>
                     <p>This is a package filled with ones.</p>
+                    <ul class="keywords matching">
+                      <li>
+                        <span>Matching keywords: </span>
+                      </li>
+                      <li>
+                        <span>one</span>
+                      </li>
+                    </ul>
                     <ul class="metadata">
                       <li class="identifier">
                         <small>package/one</small>
@@ -116,6 +124,14 @@
                   <a href="https://example.com/package/two">
                     <h4>Package Two</h4>
                     <p>This is a package filled with twos.</p>
+                    <ul class="keywords matching">
+                      <li>
+                        <span>Matching keywords: </span>
+                      </li>
+                      <li>
+                        <span>two</span>
+                      </li>
+                    </ul>
                     <ul class="metadata">
                       <li class="identifier">
                         <small>package/two</small>
@@ -133,6 +149,14 @@
                   <a href="https://example.com/package/three">
                     <h4>Package Three</h4>
                     <p>This is a package filled with threes.</p>
+                    <ul class="keywords matching">
+                      <li>
+                        <span>Matching keywords: </span>
+                      </li>
+                      <li>
+                        <span>three</span>
+                      </li>
+                    </ul>
                     <ul class="metadata">
                       <li class="identifier">
                         <small>package/three</small>
@@ -208,17 +232,17 @@
                       </a>
                     </li>
                     <li>
-                      <a href="/keywords/keyword3">keyword3
+                      <a href="/keywords/three">three
                         <span class="count_tag">3</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/keywords/keyword2">keyword2
+                      <a href="/keywords/two">two
                         <span class="count_tag">2</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/keywords/keyword1">keyword1
+                      <a href="/keywords/one">one
                         <span class="count_tag">1</span>
                       </a>
                     </li>
