--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
@@ -564,7 +564,7 @@
         <section>
           <hr/>
           <p>
-            <small>First published: 1 Jan 1970 - Last updated: 1 Jan 2001</small>
+            <small>Last updated on 1 Jan 2001</small>
           </p>
         </section>
       </div>
