Fix canonical search url

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
     <meta name="og:site_name" content="The Swift Package Index"/>
-    <link rel="canonical" href="http://localhost:8080/"/>
-    <meta name="twitter:url" content="http://localhost:8080/"/>
-    <meta name="og:url" content="http://localhost:8080/"/>
+    <link rel="canonical" href="http://localhost:8080/search?query=foo"/>
+    <meta name="twitter:url" content="http://localhost:8080/search?query=foo"/>
+    <meta name="og:url" content="http://localhost:8080/search?query=foo"/>
     <title>Search Results for &ldquo;query&rdquo; &ndash; Swift Package Index</title>
     <meta name="twitter:title" content="Search Results for &ldquo;query&rdquo; &ndash; Swift Package Index"/>
     <meta name="og:title" content="Search Results for &ldquo;query&rdquo; &ndash; Swift Package Index"/>
