--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -75,15 +75,23 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
           <li>
-            <a href="/foo">Foo</a>
+            <a href="/foo">
+              <span>Foo</span>
+            </a>
           </li>
           <li>
-            <a href="/foo/foobar">foobar</a>
+            <a href="/foo/foobar">
+              <span>foobar</span>
+            </a>
           </li>
-          <li>Build Results</li>
+          <li>
+            <span>Build Results</span>
+          </li>
         </ul>
       </div>
     </nav>
