--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -75,18 +75,28 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
           <li>
-            <a href="/foo">Foo</a>
+            <a href="/foo">
+              <span>Foo</span>
+            </a>
           </li>
           <li>
-            <a href="/foo/bar">Bar</a>
+            <a href="/foo/bar">
+              <span>Bar</span>
+            </a>
           </li>
           <li>
-            <a href="/foo/bar/builds">Build Results</a>
+            <a href="/foo/bar/builds">
+              <span>Build Results</span>
+            </a>
           </li>
-          <li>Swift 5.6 on iOS</li>
+          <li>
+            <span>Swift 5.6 on iOS</span>
+          </li>
         </ul>
       </div>
     </nav>
