--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
@@ -75,15 +75,23 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
           <li>
-            <a href="/example">Example Owner</a>
+            <a href="/example">
+              <span>Example Owner</span>
+            </a>
           </li>
           <li>
-            <a href="/example/package">Example Package</a>
+            <a href="/example/package">
+              <span>Example Package</span>
+            </a>
           </li>
-          <li>Information for Maintainers</li>
+          <li>
+            <span>Information for Maintainers</span>
+          </li>
         </ul>
       </div>
     </nav>
