--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPage.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPage.1.html
@@ -75,9 +75,13 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
-          <li>Privacy &amp; Cookies</li>
+          <li>
+            <span>Privacy &amp; Cookies</span>
+          </li>
         </ul>
       </div>
     </nav>
