--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_SearchShow.1.html
@@ -66,9 +66,13 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
-          <li>Search Results for &ldquo;query&rdquo;</li>
+          <li>
+            <span>Search Results for &ldquo;query&rdquo;</span>
+          </li>
         </ul>
       </div>
     </nav>
