--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
@@ -24,10 +24,10 @@
    <div class="inner breadcrumbs">
     <nav>
      <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/owner">Owner Name</a></li>
-      <li><a href="/owner/package">Package Name</a></li>
-      <li>Documentation</li>
+      <li><a href="/"><span>Home</span></a></li>
+      <li><a href="/owner"><span>Owner Name</span></a></li>
+      <li><a href="/owner/package"><span>Package Name</span></a></li>
+      <li><span>Documentation for <span class="stable">main</span></span></li>
      </ul>
     </nav>
    </div>
