--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
@@ -24,10 +24,18 @@
    <div class="inner breadcrumbs">
     <nav>
      <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/owner">Owner Name</a></li>
-      <li><a href="/owner/package">Package Name</a></li>
-      <li>Documentation</li>
+      <li><a href="/"><span>Home</span></a></li>
+      <li><a href="/owner"><span>Owner Name</span></a></li>
+      <li><a href="/owner/package"><span>Package Name</span></a></li>
+      <li>
+       <div class="choices">
+        <span>Documentation for <span class="branch">main</span></span>
+        <ul>
+         <li><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
+         <li><a href="/owner/package/1.0.0-beta1/documentation/archive1"><span class="beta">1.0.0-beta1</span></a></li>
+         <li><a href="/owner/package/1.0.1/documentation/archive1"><span class="branch">1.0.1</span></a></li>
+        </ul>
+       </div></li>
      </ul>
     </nav>
    </div>
