--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
@@ -75,12 +75,18 @@
       <div class="inner">
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/">
+              <span>Home</span>
+            </a>
           </li>
           <li>
-            <a href="/Alamo">Alamofire</a>
+            <a href="/Alamo">
+              <span>Alamofire</span>
+            </a>
           </li>
-          <li>Alamofire</li>
+          <li>
+            <span>Alamofire</span>
+          </li>
         </ul>
       </div>
     </nav>
