--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -95,7 +95,7 @@
             </a>
           </li>
           <li>
-            <span>Swift 5.6 on iOS</span>
+            <span>Swift 5.6 on iOS at main</span>
           </li>
         </ul>
       </div>
@@ -109,7 +109,8 @@
             <a href="/foo/bar">Bar</a> with 
             <strong>Swift 5.6</strong> for 
             <strong>iOS</strong> using 
-            <strong>Xcode 13.4.1</strong>.
+            <strong>Xcode 13.4.1</strong> at 
+            <strong>main</strong>.
           </p>
           <h3>Build Command</h3>
           <pre>
