--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
@@ -33,11 +33,17 @@
         <ul>
          <li><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
          <li><a href="/owner/package/1.0.0-beta1/documentation/archive1"><span class="beta">1.0.0-beta1</span></a></li>
-         <li><a href="/owner/package/1.0.1/documentation/archive1"><span class="branch">1.0.1</span></a></li>
+         <li><a href="/owner/package/1.0.1/documentation/archive1"><span class="stable">1.0.1</span></a></li>
         </ul>
        </div></li>
      </ul>
     </nav>
+   </div>
+   <div class="latest_stable_wrap">
+    <div class="inner latest_stable">
+     This documentation is from the Package Name default branch and may not reflect the latest stable release. 
+     <a href="/owner/package/1.0.1/documentation/archive1">View latest stable docs</a>.
+    </div>
    </div>
    <div class="doc_archives_wrap">
     <div class="inner doc_archives">
