Include the branch name in the latest stable warning message.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
@@ -41,7 +41,7 @@
    </div>
    <div class="latest_stable_wrap">
     <div class="inner latest_stable">
-     This documentation is from the Package Name default branch and may not reflect the latest stable release. 
+     This documentation is from the Package Name main branch and may not reflect the latest stable release. 
      <a href="/owner/package/1.0.1/documentation/archive1">View latest stable docs</a>.
     </div>
    </div>
