Updated tests to match @daveverwer's new text.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
@@ -138,8 +138,9 @@
           <section>
             <section>
               <ul class="main_metadata">
-                <li class="has_binary_targets">Some targets in this package do not include source code. There may be more information available on why in the 
-                  <a href="#readme" title="README">README</a> file.
+                <li class="has_binary_targets">
+                  <strong>This package includes binary-only targets </strong>where source code may not be available. There may be more info available in the 
+                  <a href="#readme" title="README">README</a>.
                 </li>
                 <li class="history">In development for over 5 years, with 
                   <a href="https://github.com/Alamofire/Alamofire/commits/main">1,433 commits</a> and 
