--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
@@ -10,24 +10,19 @@
  </head> 
  <body>
   <header class="spi">
-   <div class="inner branding_and_menu">
-    <a href="/"><h1><img src="/images/logo.svg" alt="Swift Package Index Logo">Swift Package Index</h1></a>
-    <nav class="menu">
-     <ul>
-      <li><a href="/add-a-package">Add a Package</a></li>
-      <li><a href="https://blog.swiftpackageindex.com">Blog</a></li>
-      <li><a href="/faq">FAQ</a></li>
-      <li><a href="/search">Package Search</a></li>
-     </ul>
-    </nav>
-   </div>
    <div class="inner breadcrumbs">
     <nav>
      <ul>
-      <li><a href="/"><span>Home</span></a></li>
+      <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>Owner Name</span></a></li>
       <li><a href="/owner/package"><span>Package Name</span></a></li>
-      <li><span>Documentation for <span class="stable">main</span></span></li>
+      <li>
+       <div class="choices">
+        <span>Documentation for <span class="stable">main</span></span>
+        <ul>
+         <li class="current"><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
+        </ul>
+       </div></li>
      </ul>
     </nav>
    </div>
